--- a/Test.html
+++ b/Test.html
@@ -65,7 +65,7 @@
         }
     </style>
 
-//<script language="javascript" type="text/javascript">
+<script language="javascript" type="text/javascript">
 //const init = function(){
 //    document.getElementById('button-cancel').addEventListener('click', reset);
 //    document.getElementById('button-send').addEventListener('click', send);
@@ -114,7 +114,7 @@
 //}
 //	
 //document.addEventListener('DOMContentLoaded', init);
-//</script>
+</script>
 	
 <title>Test</title>	
 </head>
