--- a/Test.html
+++ b/Test.html
@@ -126,7 +126,7 @@
 <form id="form-MAP" action="results.html" method="GET">
 <h3>High-Risk Checks:</h3>
   <div>
-  	<input type="checkbox" id="PREV01" value="no" !checked> Placenta previa or low lying placenta 
+  	<input type="checkbox" name="PREV01" value="no" !checked> Placenta previa or low lying placenta 
   </div>
   
   <div>
