--- a/results.html
+++ b/results.html
@@ -82,7 +82,7 @@
     <script>
     const resultsList = document.getElementById('results')
     new URLSearchParams(window.location.search).forEach((value,name) => {
-        resultsList.append(`${PREV01}: ${value}`)
+        resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
         
 //	let H1 = document.getElementById('PREV01');
