--- a/results.html
+++ b/results.html
@@ -81,8 +81,8 @@
     <a href="/Test.html">Back to Form</a>
     <script>
     const resultsList = document.getElementById('results')
-    new URLSearchParams(window.location.search).forEach((id,value) => {
-        resultsList.append(`${id}: ${value}`)
+    new URLSearchParams(window.location.search).forEach((name,value) => {
+        resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
     }) 
 //	let H1 = document.getElementById('PREV01');
