--- a/Test.html
+++ b/Test.html
@@ -126,68 +126,68 @@
 <form id="form-MAP" action="results.html" method="GET">
 <h3>High-Risk Checks:</h3>
   <div>
-  	<input type="checkbox" name="PREV01" value="no" !checked> Placenta previa or low lying placenta 
+  	<input type="checkbox" name="PREV01" id="PREV01" value="no" !checked> Placenta previa or low lying placenta 
   </div>
   
   <div>
-  	<input type="checkbox" id="CRET01" value="no" !checked> Suspected placenta accreta/percreta
+  	<input type="checkbox" name="CRET01" id="CRET01" value="no" !checked> Suspected placenta accreta/percreta
   </div>
   
   <div>
-  	<input type="checkbox" id="HEMATOCRIT01" value="no" !checked> Hematocrit less than 30 
+  	<input type="checkbox" name="HEMATOCRIT01" id="HEMATOCRIT01" value="no" !checked> Hematocrit less than 30 
   </div>
   
   <div>
-  <input type="checkbox" id="BLEED01" value="no" !checked> Active bleeding (greater than show) on admission 
+  <input type="checkbox" name="BLEED01" id="BLEED01" value="no" !checked> Active bleeding (greater than show) on admission 
   </div>
   
   <div>
-  <input type="checkbox" id="PLATCOUNT01" value="no" !checked> Platelet count less than 100,000
+  <input type="checkbox" name="PLATCOUNT01" id="PLATCOUNT01" value="no" !checked> Platelet count less than 100,000
   </div>
   
   <div>
-  <input type="checkbox" id="COAG01" value="no" !checked> Known coagulopathy 
+  <input type="checkbox" name="COAG01" id="COAG01" value="no" !checked> Known coagulopathy 
   </div>
   <br>
 
 <h3>Medium-Risk Checks:</h3>
   <div>
-  <input type="checkbox" id="PCES01" value="no" !checked> Previous cesarean delivery or uterine surgery 
+  <input type="checkbox" name="PCES01" id="PCES01" value="no" !checked> Previous cesarean delivery or uterine surgery 
   </div>
   
   <div>
-  <input type="checkbox" id="MGEST01" value="no" !checked> Multiple gestation
+  <input type="checkbox" name="MGEST01" id="MGEST01" value="no" !checked> Multiple gestation
   </div>
   
   <div>
-  <input type="checkbox" id="PAR401" value="no" !checked> Greater than 4 previous vaginal deliveries
+  <input type="checkbox" name="PAR401" id="PAR401" value="no" !checked> Greater than 4 previous vaginal deliveries
   </div>
 
   <div>
-  <input type="checkbox" id="CHOR01" value="no" !checked> Chorioamnionitis 
+  <input type="checkbox" name="CHOR01" id="CHOR01" value="no" !checked> Chorioamnionitis 
   </div>
 
   <div>
-  <input type="checkbox" id="HISTHEM01" value="no" !checked> History of peripartum hemorrhage   
+  <input type="checkbox" name="HISTHEM01" id="HISTHEM01" value="no" !checked> History of peripartum hemorrhage   
   </div>
 
   <div>
-  <input type="checkbox" id="LEIO01" value="no" !checked> Large uterine leiomyoma
+  <input type="checkbox" name="LEIO01" id="LEIO01" value="no" !checked> Large uterine leiomyoma
   </div>
 
   <div>
-  <input type="checkbox" id="MACR01" value="no" !checked> Macrosomia (estimated fetal weight > 4 kg)
+  <input type="checkbox" name="MACR01" id="MACR01" value="no" !checked> Macrosomia (estimated fetal weight > 4 kg)
   </div>
 
   <div>
-  <input type="checkbox" id="BMI01" value="no" !checked> Morbid Obesity (BMI greater than 35 kg/m^2)
+  <input type="checkbox" name="BMI01" id="BMI01" value="no" !checked> Morbid Obesity (BMI greater than 35 kg/m^2)
   </div>
 
   <br>
   
 <h3>Low-Risk Check:</h3>
   <div>
-  <input type="checkbox" id="LOW01" value="no" !checked> Confirm that no risk factors are indicated above
+  <input type="checkbox" name="LOW01" id="LOW01" value="no" !checked> Confirm that no risk factors are indicated above
   </div>
 <br>
   <div class="form-box">
