--- a/results.html
+++ b/results.html
@@ -81,7 +81,7 @@
     <a href="/Test.html">Back to Form</a>
     <script>
     const resultsList = document.getElementById('results')
-    new URLSearchParams(window.location.search).forEach((name,value) => {
+    new URLSearchParams(window.location.search).forEach((value,name) => {
         resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
     }) 
