--- a/results.html
+++ b/results.html
@@ -84,6 +84,9 @@
     new URLSearchParams(window.location.search).forEach((value,name) => {
         resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
+        if(${name} === 'PREV01'){
+        alert('CMQCC Classification: High Risk');
+        }
     }) 
 //	let H1 = document.getElementById('PREV01');
 //	let H2 = document.getElementById('CRET01');
