--- a/results.html
+++ b/results.html
@@ -85,7 +85,7 @@
         resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
         if(${name} === 'PREV01'){
-        alert('CMQCC Classification: High Risk');
+            resultsList.append(`CMQCC Classification: High-risk`);
         }
     }) 
 //	let H1 = document.getElementById('PREV01');
