--- a/results.html
+++ b/results.html
@@ -82,13 +82,13 @@
     <script>
     const resultsList = document.getElementById('results')
     new URLSearchParams(window.location.search).forEach((value,name) => {
-        //resultsList.append(`${name}: ${value}`)
+        resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
         if(name === 'PREV01' || name === 'CRET01' || name === 'HEMATOCRIT01' || name === 'BLEED01' || name === 'PLATCOUNT01' || name === 'COAG01'){
             resultsList.append(`CMQCC Classification: High-risk`);
         } else if (name === 'PCES01' || name === 'MGEST01' || name === 'PAR01' || name === 'CHOR01' || name === 'HISTHEM01' || name === 'LEIO01' || name === 'MACR01' || name === 'BMI01') {
 		    resultsList.append(`CMQCC Classification: Medium Risk`);
-    } else {
+    	} else {
 		resultsList.append(`CMQCC Classification: Low Risk`);
     }) 
 //	let H1 = document.getElementById('PREV01');
