--- a/results.html
+++ b/results.html
@@ -95,12 +95,12 @@
 //	resultsList.append(`CMQCC Classification: Medium Risk`);
 //} else {
 //	resultsList.append(`CMQCC Classification: Low Risk`);	    
-    let H1 = document.getElementById('PREV01').value;
-    let H2 = document.getElementById('CRET01').value;
-    let H3 = document.getElementById('HEMATOCRIT01').value;
-    let H4 = document.getElementById('BLEED01').value;
-    let H5 = document.getElementById('PLATCOUNT01').value;
-    let H6 = document.getElementById('COAG01');
+    var H1 = document.getElementById('PREV01').value;
+    var H2 = document.getElementById('CRET01').value;
+    var H3 = document.getElementById('HEMATOCRIT01').value;
+    var H4 = document.getElementById('BLEED01').value;
+    var H5 = document.getElementById('PLATCOUNT01').value;
+    var H6 = document.getElementById('COAG01');
     let M1 = document.getElementById('PCES01');
     let M2 = document.getElementById('MGEST01');
     let M3 = document.getElementById('PAR401');
