--- a/results.html
+++ b/results.html
@@ -100,7 +100,7 @@
     var H3 = document.getElementById('HEMATOCRIT01').value;
     var H4 = document.getElementById('BLEED01').value;
     var H5 = document.getElementById('PLATCOUNT01').value;
-    var H6 = document.getElementById('COAG01');
+    var H6 = document.getElementById('COAG01').value;
     let M1 = document.getElementById('PCES01');
     let M2 = document.getElementById('MGEST01');
     let M3 = document.getElementById('PAR401');
