--- a/CMQCC.html
+++ b/CMQCC.html
@@ -80,7 +80,8 @@ function CMQCC(){
     Instructions: Check conditions if present, do not check if uncertain or not present
 <br>
 	
-<form id="form-CMQCC" action="results.html" method="GET">
+<form id="form-CMQCC" method="post">
+//action="results.html" method="GET">
 <h3>High-Risk Checks:</h3>
   <div>
   	<input type="checkbox" name="PREV01" id="PREV01" value=1 !checked> Placenta previa or low lying placenta 
@@ -155,21 +156,7 @@ function CMQCC(){
 	
 <div id="display" style="height: 50px; width: 100%;">
 </div>
-	<!--    
-        <div class="form-box" data-errormsg="">
-            <label for="input-email">E-mail</label>
-            <input type="email" id="input-email" required placeholder="E-mail Address" tabindex="3" />
-        </div>
-        <div class="form-box" data-errormsg="">
-            <label for="input-alive">Alive?</label>
-            <input type="checkbox" id="input-alive" value="yes" tabindex="5" checked />
-        </div>
-        <div class="form-box">
-            <button id="button-cancel">Cancel</button>
-            <button id="button-send">Send</button>
-        </div>
-	-->
-	</form>
+</form>
 	
 </body>
 </html>
