--- a/results.html
+++ b/results.html
@@ -90,11 +90,8 @@
         //resultsList.append(`CMQCC: High-risk`);
         //break;
     }) 
-    function CMQCC(){
-	var H1 = parseInt(document.forms["form-CMQCC"]["PREV01"].value);
-	var display = document.getElementById("display")
-	display.innerHTML=h1;
-}    
+var H1 = parseInt(document.forms["form-CMQCC"]["PREV01"].value)
+console.log(H1)  
 //if(name === 'PREV01' || name === 'CRET01' || name === 'HEMATOCRIT01' || name === 'BLEED01' || name === 'PLATCOUNT01' || name === 'COAG01'){
 //	resultsList.append(`CMQCC Classification: High-risk`);
 //} else if (name === 'PCES01' || name === 'MGEST01' || name === 'PAR01' || name === 'CHOR01' || name === 'HISTHEM01' || name === 'LEIO01' || name === 'MACR01' || name === 'BMI01') {
