--- a/results.html
+++ b/results.html
@@ -90,8 +90,7 @@
         //resultsList.append(`CMQCC: High-risk`);
         //break;
     }) 
-var H1 = parseInt(document.forms["form-CMQCC"]["PREV01"].value)
-console.log(H1)  
+	console.log(document.forms["form-CMQCC"]["PREV01"].value)
 //if(name === 'PREV01' || name === 'CRET01' || name === 'HEMATOCRIT01' || name === 'BLEED01' || name === 'PLATCOUNT01' || name === 'COAG01'){
 //	resultsList.append(`CMQCC Classification: High-risk`);
 //} else if (name === 'PCES01' || name === 'MGEST01' || name === 'PAR01' || name === 'CHOR01' || name === 'HISTHEM01' || name === 'LEIO01' || name === 'MACR01' || name === 'BMI01') {
