--- a/results.html
+++ b/results.html
@@ -85,12 +85,12 @@
     const resultsList = document.getElementById('results')
 	const highrisk = 0
 	const mediumrisk = 0
-	let H1 = new URLSearchParams(window.location.search).get('PREV01')
-	let H2 = new URLSearchParams(window.location.search).get('CRET01')
-	let H3 = new URLSearchParams(window.location.search).get('HEMATOCRIT01')
-	let H4 = new URLSearchParams(window.location.search).get('BLEED01')
-	let H5 = new URLSearchParams(window.location.search).get('PLATCOUNT01')
-	let H6 = new URLSearchParams(window.location.search).get('COAG01')
+	let H1 = parseFloat(new URLSearchParams(window.location.search).get('PREV01'))
+	let H2 = parseFloat(new URLSearchParams(window.location.search).get('CRET01'))
+	let H3 = parseFloat(new URLSearchParams(window.location.search).get('HEMATOCRIT01'))
+	let H4 = parseFloat(new URLSearchParams(window.location.search).get('BLEED01'))
+	let H5 = parseFloat(new URLSearchParams(window.location.search).get('PLATCOUNT01'))
+	let H6 = parseFloat(new URLSearchParams(window.location.search).get('COAG01'))
 	alert(H1+H2+H3+H4+H5+H6)
 	new URLSearchParams(window.location.search).forEach((value,name) => {
         resultsList.append(`${name}: ${value}`)
