--- a/results.html
+++ b/results.html
@@ -83,19 +83,20 @@
     <a href="/">Back to Home</a>
     <script>
     const resultsList = document.getElementById('results')
-	const highrisk = 0
-	const mediumrisk = 0
+	new URLSearchParams(window.location.search).forEach((value,name) => {
+        resultsList.append(`${name}: ${value}`)
+        resultsList.append(document.createElement('br'))
+    })
+		
+	//const highrisk = 0
+	//const mediumrisk = 0
 	let H1 = parseFloat(new URLSearchParams(window.location.search).get('PREV01'))
 	let H2 = parseFloat(new URLSearchParams(window.location.search).get('CRET01'))
 	let H3 = parseFloat(new URLSearchParams(window.location.search).get('HEMATOCRIT01'))
 	let H4 = parseFloat(new URLSearchParams(window.location.search).get('BLEED01'))
 	let H5 = parseFloat(new URLSearchParams(window.location.search).get('PLATCOUNT01'))
 	let H6 = parseFloat(new URLSearchParams(window.location.search).get('COAG01'))
-	alert(H1+H2+H3+H4+H5+H6)
-	new URLSearchParams(window.location.search).forEach((value,name) => {
-        resultsList.append(`${name}: ${value}`)
-        resultsList.append(document.createElement('br'))
-    })
+	console.log(H1)//+H2+H3+H4+H5+H6
 
 //if(name === 'PREV01' || name === 'CRET01' || name === 'HEMATOCRIT01' || name === 'BLEED01' || name === 'PLATCOUNT01' || name === 'COAG01'){
 //	resultsList.append(`CMQCC Classification: High-risk`);
