--- a/results.html
+++ b/results.html
@@ -96,7 +96,7 @@
 	let H4 = parseFloat(new URLSearchParams(window.location.search).get('BLEED01'))
 	let H5 = parseFloat(new URLSearchParams(window.location.search).get('PLATCOUNT01'))
 	let H6 = parseFloat(new URLSearchParams(window.location.search).get('COAG01'))
-	console.log(H1)//+H2+H3+H4+H5+H6
+	alert(H1)//+H2+H3+H4+H5+H6
 
 //if(name === 'PREV01' || name === 'CRET01' || name === 'HEMATOCRIT01' || name === 'BLEED01' || name === 'PLATCOUNT01' || name === 'COAG01'){
 //	resultsList.append(`CMQCC Classification: High-risk`);
