--- a/results.html
+++ b/results.html
@@ -90,15 +90,31 @@
 		
 	//const highrisk = 0
 	//const mediumrisk = 0
-	let H1 = parseFloat(new URLSearchParams(window.location.search).get('PREV01'))
-	let H2 = parseFloat(new URLSearchParams(window.location.search).get('CRET01'))
-	let H3 = parseFloat(new URLSearchParams(window.location.search).get('HEMATOCRIT01'))
-	let H4 = parseFloat(new URLSearchParams(window.location.search).get('BLEED01'))
-	let H5 = parseFloat(new URLSearchParams(window.location.search).get('PLATCOUNT01'))
-	let H6 = parseFloat(new URLSearchParams(window.location.search).get('COAG01'))
-	let high = H1+H2+H3+H4+H5+H6
+	let H1 = parseFloat(new URLSearchParams(window.location.search).get('PREV01'));
+	let H2 = parseFloat(new URLSearchParams(window.location.search).get('CRET01'));
+	let H3 = parseFloat(new URLSearchParams(window.location.search).get('HEMATOCRIT01'));
+	let H4 = parseFloat(new URLSearchParams(window.location.search).get('BLEED01'));
+	let H5 = parseFloat(new URLSearchParams(window.location.search).get('PLATCOUNT01'));
+	let H6 = parseFloat(new URLSearchParams(window.location.search).get('COAG01'));
+	let M1 = parseFloat(new URLSearchParams(window.location.search).get('PCES01'));
+	let M2 = parseFloat(new URLSearchParams(window.location.search).get('MGEST01'));
+	let M3 = parseFloat(new URLSearchParams(window.location.search).get('PAR401'));
+	let M4 = parseFloat(new URLSearchParams(window.location.search).get('CHOR01'));
+	let M5 = parseFloat(new URLSearchParams(window.location.search).get('HISTHEM01'));
+	let M6 = parseFloat(new URLSearchParams(window.location.search).get('LEIO01'));
+	let M7 = parseFloat(new URLSearchParams(window.location.search).get('MACR01'));
+	let M8 = parseFloat(new URLSearchParams(window.location.search).get('BMI01'));
+	let high = H1+H2+H3+H4+H5+H6;
+	let medium = M1+M2+M3+M4+M5+M6+M7+M8;
 	if(high > 0){
-	alert("CMQCC designation is High Risk") }
+	risk = "CMQCC designation is High Risk";
+	} else if( medium > 0){
+	risk = "CMQCC designation is Medium Risk";
+	} else{
+	risk = 'CMQCC designation is Low Risk'
+	}
+	alert(risk)    
+		
 
 //if(name === 'PREV01' || name === 'CRET01' || name === 'HEMATOCRIT01' || name === 'BLEED01' || name === 'PLATCOUNT01' || name === 'COAG01'){
 //	resultsList.append(`CMQCC Classification: High-risk`);
