--- a/results.html
+++ b/results.html
@@ -91,6 +91,7 @@
 	//const highrisk = 0
 	//const mediumrisk = 0
 	let H1 = parseFloat(new URLSearchParams(window.location.search).get('PREV01'));
+	alert(H1)
 	let H2 = parseFloat(new URLSearchParams(window.location.search).get('CRET01'));
 	let H3 = parseFloat(new URLSearchParams(window.location.search).get('HEMATOCRIT01'));
 	let H4 = parseFloat(new URLSearchParams(window.location.search).get('BLEED01'));
@@ -109,11 +110,11 @@
 	//alert(high);
 	//alert(medium);
 	if(H1 === 1 || H2 === 1){
-	risk = "CMQCC designation is High Risk";
+	risk = 'CMQCC designation is High Risk';
 	} else if(M1 === 1){
-	risk = "CMQCC designation is Medium Risk";
+	risk = 'CMQCC designation is Medium Risk';
 	} else{
-	risk = 'CMQCC designation is Low Risk'
+	risk = 'CMQCC designation is Low Risk';
 	}
 	alert(risk);    
 		
