--- a/CMQCC.html
+++ b/CMQCC.html
@@ -68,7 +68,7 @@
 <script language="javascript" type="text/javascript">
 </script>
 	
-<title>Test</title>	
+<title>CMQCC Analysis</title>	
 </head>
 <body>
 <h2>   CMQCC</h2>
