added antepartum checks for analysis

--- a/Test.html
+++ b/Test.html
@@ -71,12 +71,12 @@
 <title>Test</title>	
 </head>
 <body>
-<h2>   CMQCC</h2>
+<h2>   Full Assessment</h2>
     Instructions: Check conditions if present, do not check if uncertain or not present
 <br>
 	
 <form id="form-MAP" action="MAPresults.html" method="GET">
-<h3>High-Risk Checks:</h3>
+<h3>CMQCC High-Risk Checks:</h3>
   <div>
   	<input type="checkbox" name="PREV01" id="PREV01" value=1 !checked> Placenta previa or low lying placenta 
   </div>
@@ -102,7 +102,7 @@
   </div>
   <br>
 
-<h3>Medium-Risk Checks:</h3>
+<h3>CMQCC Medium-Risk Checks:</h3>
   <div>
   <input type="checkbox" name="PCES01" id="PCES01" value=1 !checked> Previous cesarean delivery or uterine surgery 
   </div>
@@ -137,10 +137,98 @@
 
   <br>
   
-<h3>Low-Risk Check:</h3>
-  <div>
-  No additional inputs needed for low risk assessment under the basic CMQCC, as low risk is defined by the exclusion from the high and medium risk categories.	
-  </div>
+<h3>Additional Maternal Antepartum Checks:</h3>
+<div>
+	<input type="checkbox" name="AGE40" id="AGE40" value=1 !checked> Age over 40
+</div>
+
+<div>
+	<input type="checkbox" name="ARR01" id="ARR01" value=1 !checked> Arrhythmia
+</div>	
+	
+<div>
+	<input type="checkbox" name="ASTH01" id="ASTH01" value=1 !checked> Asthma
+</div>	
+
+<div>
+	<input type="checkbox" name="CAUC01" id="CAUC01" value=1 !checked> Caucasian race
+</div>
+	
+<div>
+	<input type="checkbox" name="CERC01" id="CERC01" value=1 !checked> Cervical cerclage
+</div>
+	
+<div>
+	<input type="checkbox" name="DIAB01" id="DIAB01" value=1 !checked> Diabetes (type I, type II, gestational)
+</div>
+	
+<div>
+	<input type="checkbox" name="DEP01" id="DEP01" value=1 !checked> Clinical depression
+</div>
+	
+<div>
+	<input type="checkbox" name="ENDO01" id="ENDO01" value=1 !checked> Endometriosis
+</div>
+	
+<div>
+	<input type="checkbox" name="FIRSTDEL01" id="FIRSTDEL01" value=1 !checked> First delivery
+</div>
+	
+<div>
+	<input type="checkbox" name="HF01" id="HF01" value=1 !checked> Heart failure
+</div>
+	
+<div>
+	<input type="checkbox" name="HD01" id="HD01" value=1 !checked> Heart disease
+</div>
+	
+<div>
+	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Hypertension
+</div>
+	
+<div>
+	<input type="checkbox" name="LUP01" id="LUP01" value=1 !checked> Lupus
+</div>
+	
+<div>
+	<input type="checkbox" name="MINFERT01" id="MINFERT01" value=1 !checked> Maternal infertility
+</div>
+	
+<div>
+	<input type="checkbox" name="PLAC01" id="PLAC01" value=1 !checked> Placental abruption
+</div>
+
+<div>
+	<input type="checkbox" name="POLY01" id="POLY01" value=1 !checked> Polyhydroamnios
+</div>
+	
+<div>
+	<input type="checkbox" name="PREC01" id="PREC01" value=1 !checked> Preeclampsia
+</div>
+	
+<div>
+	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Renal abnormality
+</div>
+	
+<div>
+	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Renal insufficiency
+</div>
+	
+<div>
+	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Renal failure
+</div>
+	
+<div>
+	<input type="checkbox" name="SICKL01" id="SICKL01" value=1 !checked> Sickle cell trait
+</div>
+	
+<div>
+	<input type="checkbox" name="SMOKE01" id="SMOKE01" value=1 !checked> Smoking (maternal smoking history)
+</div>
+	
+<div>
+	<input type="checkbox" name="UTI01" id="UTI01" value=1 !checked> Urinary tract infection
+</div>
 <br>
 
 <div class="form-box">
