show features at bottom

--- a/MAPresults.html
+++ b/MAPresults.html
@@ -269,6 +269,7 @@
 	resultsList.append(document.createElement('br'))
 	resultsList.append(document.createElement('br'))
 	resultsList.append('Features Selected:')
+	resultsList.append(document.createElement('br'))
 	//alert(HEM);
 	//alert(TRANS);
 	    
