--- a/MAPresults.html
+++ b/MAPresults.html
@@ -267,11 +267,11 @@
 	resultsList.append(document.createElement('br'))
 	resultsList.append(MAP_TRANS);
 	resultsList.append(document.createElement('br'))    
-	//resultsList.append('Transfusion Risk Estimate: ' + num.toString(Math.round(P_TRANS*100)))
+	resultsList.append(P_TRANS)//'Transfusion Risk Estimate: ' + num.toString(Math.round(P_TRANS*100)))
 	resultsList.append(document.createElement('br'))
 	resultsList.append(MAP_HEM);
 	resultsList.append(document.createElement('br'))    
-	//resultsList.append('Hemorrhage Risk Estimate: ' + num.toString(Math.round(P_HEM*100)))
+	resultsList.append(P_HEM)//'Hemorrhage Risk Estimate: ' + num.toString(Math.round(P_HEM*100)))
 	resultsList.append(document.createElement('br'))
 	resultsList.append(document.createElement('br'))
 	    
