--- a/MAPresults.html
+++ b/MAPresults.html
@@ -244,8 +244,8 @@
 	}
 	
 	
-	let P_HEM = 1 / (1 + Math.exp(HEM));    
-	let P_TRANS = 1 / (1 + Math.exp(TRANS)); 
+	let P_HEM = 1 / (1 + Math.exp(-HEM));    
+	let P_TRANS = 1 / (1 + Math.exp(-TRANS)); 
 
 	if(P_HEM > 0.287){
 	MAP_HEM = 'Hemorrhage Risk: High Risk';
