trying to change score

--- a/MAPresults.html
+++ b/MAPresults.html
@@ -265,11 +265,11 @@
 	    
    	resultsList.append('MAP Assessment:');
 	resultsList.append(document.createElement('br'))
-	resultsList.append(MAP_TRANS);
+	resultsList.append(MAP_TRANS*100);
 	resultsList.append(document.createElement('br'))    
 	resultsList.append(P_TRANS)//'Transfusion Risk Estimate: ' + num.toString(Math.round(P_TRANS*100)))
 	resultsList.append(document.createElement('br'))
-	resultsList.append(MAP_HEM);
+	resultsList.append(MAP_HEM*100);
 	resultsList.append(document.createElement('br'))    
 	resultsList.append(P_HEM)//'Hemorrhage Risk Estimate: ' + num.toString(Math.round(P_HEM*100)))
 	resultsList.append(document.createElement('br'))
