--- a/CMQCC.html
+++ b/CMQCC.html
@@ -75,7 +75,7 @@
     Instructions: Check conditions if present, do not check if uncertain or not present
 <br>
 	
-<form id="form-CMQCC" action="results.html" method="GET">
+<form id="form-CMQCC" action="CMQCCresults.html" method="GET">
 <h3>High-Risk Checks:</h3>
   <div>
   	<input type="checkbox" name="PREV01" id="PREV01" value=1 !checked> Placenta previa or low lying placenta 
