--- a/Antepartum.html
+++ b/Antepartum.html
@@ -75,7 +75,7 @@
     Instructions: Check conditions if present, do not check if uncertain or not present
 <br>
 	
-<form id="form-MAP" action="MAP_Antepartum.html" method="GET">
+<form id="form-MAP" action="AntepartumResults.html" method="GET">
 <h3>CMQCC High-Risk Checks:</h3>
   <div>
   	<input type="checkbox" name="PREV01" id="PREV01" value=1 !checked> Placenta previa or low lying placenta 
