--- a/Peripartum.html
+++ b/Peripartum.html
@@ -72,7 +72,7 @@
 </head>
 <body>
 <h1>   Peripartum Assessment</h1>
-    Instructions: Check conditions if present, do not check if uncertain or not present
+<h2> Instructions: Check conditions if present, do not check if uncertain or not present</h2>
 <br>
 	
 <form id="form-MAP_PERI" action="PeripartumResults.html" method="GET">
@@ -229,7 +229,6 @@
 <div>
 	<input type="checkbox" name="UTI01" id="UTI01" value=1 !checked> Urinary tract infection
 </div>
-<br>
 <br>
   
 <h3>Additional Maternal Peripartum Checks:</h3>
