--- a/Peripartum.html
+++ b/Peripartum.html
@@ -18,6 +18,9 @@
         h1{
             margin: 1rem 2rem;
         }
+        h2{
+            margin: 1rem 2rem;
+        }	
         form{
             margin: 2rem;
             width: 800px;
