--- a/Antepartum.html
+++ b/Antepartum.html
@@ -18,6 +18,9 @@
         h1{
             margin: 1rem 2rem;
         }
+        h2{
+            margin: 1rem 2rem;
+        }
         form{
             margin: 2rem;
             width: 800px;
@@ -72,7 +75,7 @@
 </head>
 <body>
 <h1>   Antepartum Assessment</h1>
-    Instructions: Check conditions if present, do not check if uncertain or not present
+<h2>    Instructions: Check conditions if present, do not check if uncertain or not present </h2>
 <br>
 	
 <form id="form-MAP" action="AntepartumResults.html" method="GET">
