--- a/Peripartum.html
+++ b/Peripartum.html
@@ -20,7 +20,10 @@
         }
         h2{
             margin: 1rem 2rem;
-        }	
+        }
+        h3{
+            margin: 1rem 2rem;
+        }
         form{
             margin: 2rem;
             width: 800px;
@@ -74,8 +77,8 @@
 <title>Peripartum</title>	
 </head>
 <body>
-<h1>   Peripartum Assessment</h1>
-<h3> Instructions: Check conditions if present, do not check if uncertain or not present</h3>
+<h1>Peripartum Assessment</h1>
+<h3>Instructions: Check conditions if present, do not check if uncertain or not present</h3>
 <br>
 	
 <form id="form-MAP_PERI" action="PeripartumResults.html" method="GET">
