--- a/Antepartum.html
+++ b/Antepartum.html
@@ -21,6 +21,9 @@
         h2{
             margin: 1rem 2rem;
         }
+        h3{
+            margin: 1rem 2rem;
+        }
         form{
             margin: 2rem;
             width: 800px;
