remove heading margins

--- a/Antepartum.html
+++ b/Antepartum.html
@@ -9,20 +9,11 @@
         *::after,
         *:before{
             padding: 0;
-            margin: 0;
+            margin: 1rem;
             box-sizing: border-box;
         }
         html{
             font:normal 20px/1.5 sans-serif;
-        }
-        h1{
-            margin: 1rem 2rem;
-        }
-        h2{
-            margin: 1rem 2rem;
-        }
-        h3{
-            margin: 1rem 2rem;
         }
         form{
             margin: 2rem;
@@ -78,7 +69,8 @@
 </head>
 <body>
 <h1>Antepartum Assessment</h1>
-<h3>Instructions: Check conditions if present, do not check if uncertain or not present </h3>
+
+Instructions: Check conditions if present, do not check if uncertain or not present
 <br>
 	
 <form id="form-MAP" action="AntepartumResults.html" method="GET">
