--- a/Antepartum.html
+++ b/Antepartum.html
@@ -8,8 +8,8 @@
         *,
         *::after,
         *:before{
-            padding: 0;
-            margin: 1rem;
+            padding: 1rem;
+            margin: 0;
             box-sizing: border-box;
         }
         html{
