--- a/Antepartum.html
+++ b/Antepartum.html
@@ -8,12 +8,19 @@
         *,
         *::after,
         *:before{
-            padding: 1rem;
+            padding: 0;
             margin: 0;
             box-sizing: border-box;
         }
         html{
             font:normal 20px/1.5 sans-serif;
+        }
+        h1{
+            margin: 1rem 2rem;
+        }
+        h2{
+            margin: 1rem 2rem;
+            font-weight: normal;
         }
         form{
             margin: 2rem;
@@ -70,7 +77,7 @@
 <body>
 <h1>Antepartum Assessment</h1>
 
-Instructions: Check conditions if present, do not check if uncertain or not present
+<h2>Instructions: Check conditions if present, do not check if uncertain or not present</h2>
 <br>
 	
 <form id="form-MAP" action="AntepartumResults.html" method="GET">
