--- a/Peripartum.html
+++ b/Peripartum.html
@@ -20,9 +20,7 @@
         }
         h2{
             margin: 1rem 2rem;
-        }
-        h3{
-            margin: 1rem 2rem;
+            font-weight: normal;
         }
         form{
             margin: 2rem;
@@ -78,10 +76,9 @@
 </head>
 <body>
 <h1>Peripartum Assessment</h1>
-<h3>Instructions: Check conditions if present, do not check if uncertain or not present</h3>
-<br>
+<h2>Instructions: Check conditions if present, do not check if uncertain or not present</h2>
 	
-<form id="form-MAP_PERI" action="PeripartumResults.html" method="GET">
+<form id="form-peripartum" action="PeripartumResults.html" method="GET">
 <h3>CMQCC High-Risk Checks:</h3>
   <div>
   	<input type="checkbox" name="PREV01" id="PREV01" value=1 !checked> Placenta previa or low lying placenta 
