--- a/CMQCC.html
+++ b/CMQCC.html
@@ -18,6 +18,10 @@
         h1{
             margin: 1rem 2rem;
         }
+        h2{
+            margin: 1rem 2rem;
+            font-weight: normal;
+        }
         form{
             margin: 2rem;
             width: 800px;
@@ -71,9 +75,8 @@
 <title>CMQCC Analysis</title>	
 </head>
 <body>
-<h2>   CMQCC</h2>
-    Instructions: Check conditions if present, do not check if uncertain or not present
-<br>
+<h1>CMQCC</h1>
+<h2>Instructions: Check conditions if present, do not check if uncertain or not present</h2>
 	
 <form id="form-CMQCC" action="CMQCCresults.html" method="GET">
 <h3>High-Risk Checks:</h3>
