--- a/AntepartumResults.html
+++ b/AntepartumResults.html
@@ -76,7 +76,7 @@
     <title>MAP Antepartum Results</title>
 </head>
 <body>
-<h1>Antepartum Results<h1>
+<h1>Antepartum Results</h1>
     <div id="results"></div>
     <a href="/Antepartum.html">Back to Antepartum Assessment Form</a>
 	<br>
