--- a/PeripartumResults.html
+++ b/PeripartumResults.html
@@ -76,7 +76,7 @@
     <title>Peripartum Results</title>
 </head>
 <body>
-<h1>Peripartum Results<h1>
+<h1>Peripartum Results</h1>
     <div id="results"></div>
     <a href="/Peripartum.html">Back to Peripartum Assessment Form</a>
 	<br>
