--- a/AntepartumResults.html
+++ b/AntepartumResults.html
@@ -165,7 +165,7 @@
 	}
 	    
 	if(parseFloat(new URLSearchParams(window.location.search).get('HD01')) === 1){
-	HEM += 0.0601;
+	HEM -= 0.0601;
 	TRANS += 0.8696;
 	}
 	    
