--- a/AntepartumResults.html
+++ b/AntepartumResults.html
@@ -8,7 +8,7 @@
         *::after,
         *:before{
             padding: 0;
-            margin: 0;
+            margin: 0rem 2rem;
             box-sizing: border-box;
         }
         html{
