--- a/CMQCCresults.html
+++ b/CMQCCresults.html
@@ -9,14 +9,14 @@
         *::after,
         *:before{
             padding: 0;
-            margin: 0;
+            margin: 0rem 1rem;
             box-sizing: border-box;
         }
         html{
             font:normal 20px/1.5 sans-serif;
         }
         h1{
-            margin: 1rem 2rem;
+            margin: 1rem 1rem;
         }
         form{
             margin: 2rem;
@@ -74,11 +74,14 @@
             content: attr(data-errormsg);
         }
     </style>
-    <title>Results</title>
+    <title>CMQCC</title>
 </head>
 <body>
+<h1>CMQCC Results</h1>
     <div id="results"></div>
-    <a href="/Test.html">Back to CMQCC</a>
+    <a href="/CMQCC.html">Back to CMQCC</a>
+	<br>
+    <a href="/Antepartum.html">Link to the MAP Antepartum assessment</a>
 	<br>
     <a href="/">Back to Home</a>
     <script>
