--- a/CMQCC.html
+++ b/CMQCC.html
@@ -20,8 +20,8 @@
         }
         h2{
             margin: 0rem 2rem;
-            font-weight: normal;
-            font-size: 1rem
+            font-weight: normal; 
+            font-size: 1rem;
         }
         form{
             margin: 2rem;
