--- a/Antepartum.html
+++ b/Antepartum.html
@@ -172,7 +172,7 @@
 </div>
 	
 <div>
-	<input type="checkbox" name="ENDO01" id="ENDO01" value=1 !checked> Endometriosis
+	<input type="checkbox" name="ENDO01" id="ENDO01" value=1 !checked> Endometritis
 </div>
 	
 <div>
@@ -184,11 +184,11 @@
 </div>
 	
 <div>
-	<input type="checkbox" name="HD01" id="HD01" value=1 !checked> Heart disease
+	<input type="checkbox" name="HD01" id="HD01" value=1 !checked> Heart disease (congenital, rheumatic, myocarditis/cardiomyopathy, valve disorder, artificial valves, or other) 
 </div>
 	
 <div>
-	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Hypertension
+	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
 </div>
 	
 <div>
@@ -212,15 +212,15 @@
 </div>
 	
 <div>
-	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Renal abnormality
+	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
 </div>
 	
 <div>
-	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Renal insufficiency
+	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
 </div>
 	
 <div>
-	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Renal failure
+	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
 </div>
 	
 <div>
