--- a/Postpartum.html
+++ b/Postpartum.html
@@ -19,8 +19,9 @@
             margin: 1rem 2rem;
         }
         h2{
-            margin: 1rem 2rem;
-            font-weight: normal;
+            margin: 0rem 2rem;
+            font-weight: normal; 
+            font-size: 1.5rem;
         }
         form{
             margin: 2rem;
